[package]
name = "bingo-giovanni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"
urlencoding = "2.1.2"
warp = "0.3.3"
